<resources>
    <string name="app_name">Armut</string>
    <string name="screen_home_title_str">Home</string>
    <string name="message_no_network_connected_str">No network connected!</string>
    <string name="message_something_went_wrong_str">Something went wrong!</string>
    <string name="label_no_internet">No internet connection</string>
    <string name="label_popular_these_days">Popular these days</string>
    <string name="hizmet_pis_agzima">Hizmet Pis\nagzima dus</string>
    <string name="which_service_do_you_need">Which service do you need?</string>
    <string name="loremIspm_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>
    <string name="newly_weds">First time newly weds</string>
    <string name="label_all_services">All Services</string>
    <string name="latest_from_blog">Latest from the blog</string>
    <string name="prosNearYou">Pros near you</string>
    <string name="averageRating">average rating</string>
    <string name="service_guaranteed">Service Guaranteed</string>
    <string name="free_of_charges">Free of charges</string>
</resources>